pagina about con estilos hecha

--- a/about.html
+++ b/about.html
@@ -173,41 +173,50 @@
         </section>
 
         <section class="counter">
-            <h4 class="counter__subtitle">Menu</h4>
-            <h2 class="counter__title">Our Foods Menu</h2>
+            <h4 class="counter__subtitle">Counter</h4>
+            <h2 class="counter__title">Some Fun Facts</h2>
             <ul class="counter__archievement-list">
                 <li class="counter__archievement-list__archievement">
-                    <div class="counter__archievement-list__archievement__left-part">
-                        <img class="counter__archievement-list__archievement__left-part__image" 
-                        src="assets/icons/about-page/counter/happy-users.png" alt="">
-                        <h2 class="counter__archievement-list__archievement__left-part__title">8000</h2>
-                        <p class="counter__archievement-list__archievement__left-part__subtitle">Happy Users</p>
+                    <img class="counter__archievement-list__archievement__image" 
+                    src="assets/icons/about-page/counter/happy-users.png" alt="">
+                    <div class="counter__archievement-list__archievement__text-container">
+                        <h2 class="counter__archievement-list__archievement__text-container__title">8000</h2>
+                        <p class="counter__archievement-list__archievement__text-container__subtitle">Happy Users</p>
                     </div>
                     <img class="counter__archievement-list__archievement__arrow" src="assets/icons/about-page/white-arrow.png" alt="">
                 </li>
                 <li class="counter__archievement-list__archievement">
-                    <div class="counter__archievement-list__archievement__left-part">
-                        <img class="counter__archievement-list__archievement__left-part__image"
-                        src="assets/icons/about-page/counter/ratings.png" alt="">
-                        <h2 class="counter__archievement-list__archievement__left-part__title">10M</h2>
-                        <p class="counter__archievement-list__archievement__left-part__subtitle">Reviews & Appriciate</p>
+                    <img class="counter__archievement-list__archievement__image"
+                    src="assets/icons/about-page/counter/ratings.png" alt="">
+                    <div class="counter__archievement-list__archievement__text-container">
+                        <h2 class="counter__archievement-list__archievement__text-container__title">10M</h2>
+                        <p class="counter__archievement-list__archievement__text-container__subtitle">Reviews & Appriciate</p>
                     </div>
                     <img class="counter__archievement-list__archievement__arrow" src="assets/icons/about-page/white-arrow.png" alt="">
                 </li>
                 <li class="counter__archievement-list__archievement">
-                    <div class="counter__archievement-list__archievement__left-part">
-                        <img class="counter__archievement-list__archievement__left-part__image"
-                        src="assets/icons/about-page/counter/world.png" alt="">
-                        <h2 class="counter__archievement-list__archievement__left-part__title">100</h2>
-                        <p class="counter__archievement-list__archievement__left-part__subtitle">Country Coverage</p>
+                    <img class="counter__archievement-list__archievement__image"
+                    src="assets/icons/about-page/counter/world.png" alt="">
+                    <div class="counter__archievement-list__archievement__text-container">
+                        <h2 class="counter__archievement-list__archievement__text-container__title">100</h2>
+                        <p class="counter__archievement-list__archievement__text-container__subtitle">Country Coverage</p>
                     </div>
                     <img class="counter__archievement-list__archievement__arrow" src="assets/icons/about-page/white-arrow.png" alt="">
                 </li>
             </ul>
-            <article class="counter__images">
-                <img src="assets/images/placeholder-image.png" alt="">
-                <img src="assets/images/placeholder-image.png" alt="">
+
+            <article class="counter__images-swiper swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img class="counter-image" src="assets/images/placeholder-image.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img class="counter-image" src="assets/images/placeholder-image.png" alt="">
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
             </article>
+            
         </section>
     </main>
 
