--- a/room-list.html
+++ b/room-list.html
@@ -362,13 +362,13 @@
                 </article>
             </div>
             <div class="rooms__pagination">
-                <a href="#">&lt;&lt;</a>
-                <a href="#">1</a>
-                <a href="#">2</a>
-                <a href="#">3</a>
-                <a href="#">...</a>
-                <a href="#">10</a>
-                <a href="#">&gt;&gt;</a>
+                <a class="rooms__pagination__page" href="#">&lt;&lt;</a>
+                <a class="rooms__pagination__page" href="#">1</a>
+                <a class="rooms__pagination__page rooms__pagination__page--active" href="#">2</a>
+                <a class="rooms__pagination__page" href="#">3</a>
+                <a class="rooms__pagination__page" href="#">...</a>
+                <a class="rooms__pagination__page" href="#">10</a>
+                <a class="rooms__pagination__page" href="#">&gt;&gt;</a>
             </div>
         </section>
     </main>
