estilo seccion info

--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,8 @@
         <section class="info">
             <div class="info__media">
                 <article class="info__media__contact-media">
+                    <img class="info__media__contact-media__image" src="assets/icons/footer/location-footer.png" alt="">
+                    <span class="info__media__contact-media__number">01</span>
                     <div class="info__media__contact-media__text">
                         <h3 class="info__media__contact-media__text__title">Hotel Address</h3>
                         <p class="info__media__contact-media__text__text">
@@ -77,6 +79,8 @@
                     </div>
                 </article>
                 <article class="info__media__contact-media">
+                    <img class="info__media__contact-media__image" src="assets/icons/footer/phone.png" alt="">
+                    <span class="info__media__contact-media__number">02</span>
                     <div class="info__media__contact-media__text">
                         <h3 class="info__media__contact-media__text__title">Phone Number</h3>
                         <a class="info__media__contact-media__text__text" href="tel:+34675850515">
@@ -85,6 +89,8 @@
                     </div>
                 </article>
                 <article class="info__media__contact-media">
+                    <img class="info__media__contact-media__image" src="assets/icons/footer/mail.png" alt="">
+                    <span class="info__media__contact-media__number">03</span>
                     <div class="info__media__contact-media__text">
                         <h3 class="info__media__contact-media__text__title">Email</h3>
                         <a class="info__media__contact-media__text__text" href="mailto:patriciotristante1999@gmail.com">
@@ -93,7 +99,7 @@
                     </div>
                 </article>
             </div>
-            <img src="assets/images/placeholder-image.png" alt="">
+            <img class="info__map" src="assets/images/placeholder-image.png" alt="">
         </section>
 
         <form class="form" action="" method="get">
