estilos pagina contact

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h3 class="front__banner__subtitle">THE ULTIMATE LUXURY EXPERIENCE</h3>
                 <h1 class="front__banner__title front__banner__title--home">The Perfect Base For You</h1>
                 <a class="front__banner__link front__banner__link--tour" href="#">Take a Tour</a>
-                <a class="front__banner__link front__banner__link--learn-more" href="#">Learn more</a>
+                <a class="front__banner__link front__banner__link--learn-more" href="about.html">Learn more</a>
             </article>
             <form class="front__availability" action="" method="get">
                 <label class="front__availability__label" for="arrival-date">Arrival Date</label>
