estilos partes compartidas en desktop hechas

--- a/index.html
+++ b/index.html
@@ -59,10 +59,14 @@
                 <a class="front__banner__link front__banner__link--learn-more" href="about.html">Learn more</a>
             </article>
             <form class="front__availability" action="" method="get">
-                <label class="front__availability__label" for="arrival-date">Arrival Date</label>
-                <input class="front__availability__date-input" type="date" name="arrival-date" id="arrival-date">
-                <label class="front__availability__label" for="departure-date">Departure Date</label>
-                <input class="front__availability__date-input" type="date" name="departure-date" id="departure-date">
+                <div class="front__availability__field">
+                    <label class="front__availability__field__label" for="arrival-date">Arrival Date</label>
+                    <input class="front__availability__field__date-input" type="date" name="arrival-date" id="arrival-date">
+                </div>
+                <div class="front__availability__field">
+                    <label class="front__availability__field__label" for="departure-date">Departure Date</label>
+                    <input class="front__availability__field__date-input" type="date" name="departure-date" id="departure-date">
+                </div>
                 <input class="front__availability__submit" type="submit" value="Check availability">
             </form>
         </section>
